{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 17,
  "lineage": "1e455592-9911-2ea3-042e-5e2412c265c1",
  "resources": [
    {
      "module": "module.module_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-instance",
      "provider": "module.module_ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a81a99f5ec58529",
            "arn": "arn:aws:ec2:us-east-1:992382822158:instance/i-05bb8cca54a3893f2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05bb8cca54a3893f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "docker",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03a0118b9d13e4b91",
            "private_dns": "ip-10-0-0-21.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.21",
            "public_dns": "ec2-34-229-103-140.compute-1.amazonaws.com",
            "public_ip": "34.229.103.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0defd8619d2f812dc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de60b288d3ed04b8",
            "tags": {
              "Name": "mukesh-private-ec2"
            },
            "tags_all": {
              "Name": "mukesh-private-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0daddf643ca35581c"
            ]
          },
          "dependencies": [
            "module.module_ec2.aws_security_group.ec2_sg",
            "module.module_vpc.aws_subnet.private_subnet_test",
            "module.module_vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-instance",
      "provider": "module.module_ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a81a99f5ec58529",
            "arn": "arn:aws:ec2:us-east-1:992382822158:instance/i-025db3d1a57177c43",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-025db3d1a57177c43",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "docker",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09559fa7a7a850826",
            "private_dns": "ip-10-0-0-13.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.13",
            "public_dns": "ec2-3-92-25-207.compute-1.amazonaws.com",
            "public_ip": "3.92.25.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-048fca6a95fd2bacd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05485df457e76b034",
            "tags": {
              "Name": "mukesh-public-ec2"
            },
            "tags_all": {
              "Name": "mukesh-public-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0daddf643ca35581c"
            ]
          },
          "dependencies": [
            "module.module_ec2.aws_security_group.ec2_sg",
            "module.module_vpc.aws_internet_gateway.test_igw",
            "module.module_vpc.aws_subnet.public_subnet_test",
            "module.module_vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "module.module_ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:security-group/sg-0daddf643ca35581c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0daddf643ca35581c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240731144303668000000001",
            "name_prefix": "terraform-",
            "owner_id": "992382822158",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mukesh-ec2-instance-sg"
            },
            "tags_all": {
              "Name": "mukesh-ec2-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09da52f21a77d4b73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "test_eip",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ff1723f84ca584b",
            "arn": "arn:aws:ec2:us-east-1:992382822158:elastic-ip/eipalloc-08ff1723f84ca584b",
            "association_id": "eipassoc-0fffc36cfe1780bc0",
            "domain": "vpc",
            "id": "eipalloc-08ff1723f84ca584b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-016c142672a737c48",
            "private_dns": "ip-10-0-0-7.ec2.internal",
            "private_ip": "10.0.0.7",
            "public_dns": "ec2-34-206-250-22.compute-1.amazonaws.com",
            "public_ip": "34.206.250.22",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mukesh-eip"
            },
            "tags_all": {
              "Name": "mukesh-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_igw",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:internet-gateway/igw-0da7c59b1a9819188",
            "id": "igw-0da7c59b1a9819188",
            "owner_id": "992382822158",
            "tags": {
              "Name": "mukesh-igw"
            },
            "tags_all": {
              "Name": "mukesh-igw"
            },
            "vpc_id": "vpc-09da52f21a77d4b73"
          },
          "dependencies": [
            "module.module_vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test_nat_gateway",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ff1723f84ca584b",
            "association_id": "eipassoc-0fffc36cfe1780bc0",
            "connectivity_type": "public",
            "id": "nat-0a493b508d0ae322d",
            "network_interface_id": "eni-016c142672a737c48",
            "private_ip": "10.0.0.7",
            "public_ip": "34.206.250.22",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05485df457e76b034",
            "tags": {
              "Name": "mukesh-nat-gateway"
            },
            "tags_all": {
              "Name": "mukesh-nat-gateway"
            }
          },
          "dependencies": [
            "module.module_vpc.aws_eip.test_eip",
            "module.module_vpc.aws_internet_gateway.test_igw",
            "module.module_vpc.aws_subnet.public_subnet_test",
            "module.module_vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:route-table/rtb-020aad04ef144eebc",
            "id": "rtb-020aad04ef144eebc",
            "owner_id": "992382822158",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a493b508d0ae322d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mukesh-private-rt"
            },
            "tags_all": {
              "Name": "mukesh-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09da52f21a77d4b73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_eip.test_eip",
            "module.module_vpc.aws_internet_gateway.test_igw",
            "module.module_vpc.aws_nat_gateway.test_nat_gateway",
            "module.module_vpc.aws_subnet.public_subnet_test",
            "module.module_vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:route-table/rtb-0a4cf8831995179e9",
            "id": "rtb-0a4cf8831995179e9",
            "owner_id": "992382822158",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0da7c59b1a9819188",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mukesh-public-rt"
            },
            "tags_all": {
              "Name": "mukesh-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09da52f21a77d4b73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_internet_gateway.test_igw",
            "module.module_vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01288ba150576cfae",
            "route_table_id": "rtb-020aad04ef144eebc",
            "subnet_id": "subnet-0de60b288d3ed04b8"
          },
          "dependencies": [
            "module.module_vpc.aws_eip.test_eip",
            "module.module_vpc.aws_internet_gateway.test_igw",
            "module.module_vpc.aws_nat_gateway.test_nat_gateway",
            "module.module_vpc.aws_route_table.private_rt",
            "module.module_vpc.aws_subnet.private_subnet_test",
            "module.module_vpc.aws_subnet.public_subnet_test",
            "module.module_vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab28f7c959cee7f4",
            "route_table_id": "rtb-0a4cf8831995179e9",
            "subnet_id": "subnet-05485df457e76b034"
          },
          "dependencies": [
            "module.module_vpc.aws_internet_gateway.test_igw",
            "module.module_vpc.aws_route_table.public_rt",
            "module.module_vpc.aws_subnet.public_subnet_test",
            "module.module_vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_test",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:subnet/subnet-0de60b288d3ed04b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de60b288d3ed04b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382822158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mukesh-private-subnet"
            },
            "tags_all": {
              "Name": "mukesh-private-subnet"
            },
            "vpc_id": "vpc-09da52f21a77d4b73"
          },
          "dependencies": [
            "module.module_vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_test",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:subnet/subnet-05485df457e76b034",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05485df457e76b034",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382822158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mukesh-public-subnet"
            },
            "tags_all": {
              "Name": "mukesh-public-subnet"
            },
            "vpc_id": "vpc-09da52f21a77d4b73"
          },
          "dependencies": [
            "module.module_vpc.aws_internet_gateway.test_igw",
            "module.module_vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "module.module_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382822158:vpc/vpc-09da52f21a77d4b73",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/27",
            "default_network_acl_id": "acl-08a05f91dbba19b98",
            "default_route_table_id": "rtb-092553daa1688e0e7",
            "default_security_group_id": "sg-0dfb43ef76207fb55",
            "dhcp_options_id": "dopt-07f08856e16649025",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09da52f21a77d4b73",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-092553daa1688e0e7",
            "owner_id": "992382822158",
            "tags": {
              "Name": "mukesh-vpc"
            },
            "tags_all": {
              "Name": "mukesh-vpc"
            }
          }
        }
      ]
    }
  ]
}